# mbasm

./: CMakeLists.txt  example.mba
inc/: commandeval.h  error.h  ins_values.h  list.h  stringmanip.h  types.h  utility.h
src/: command.c  commandeval.c  error.c  ins.c  list.c  main.c  stringmanip.c  utility.c
